<resources>
    <string name="app_name">Password Generator</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="bad">Bad</string>
    <string name="numberofcharacter">Number of characters</string>
    <string name="exclude_similar_cha">Exclude similar characters</string>
    <string name="option_password">Hexadecimal 0-9, A-F</string>
    <string name="capital">A-Z</string>
    <string name="lowercase">a-z</string>
    <string name="number">0-9</string>
    <string name="optional_character">Optional Characters</string>
    <string name="genaration_new">Generate New</string>
    <string name="save">Save</string>
    <string name="suggest_client_dialog">Do you want to save this password for an account or a category?</string>
    <string name="my_account">My Account</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="catogory">Catogory</string>
    <string name="select_your_color_category">Select category color</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="searching_title">Searching Title</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter">Enter</string>
    <string name="digit">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ&amp;!@#$%^*</string>
</resources>
