<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nttungg.passwordgenarator.screens.homescreen.HomeActivity">

    <TextView
        android:id="@+id/text_appname"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/edittext_result"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/layout_boder"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"
        android:padding="10dp"
        android:textColor="@color/colorGreyDark"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_appname"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_result"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/text_numbertitle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/numberofcharacter"
        android:textColor="@color/colorGreyDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberPicker"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox_similarchar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/exclude_similar_cha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_numbertitle" />

    <CheckBox
        android:id="@+id/checkBox_option"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/option_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_similarchar" />

    <CheckBox
        android:id="@+id/checkBox_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/capital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_option" />

    <CheckBox
        android:id="@+id/checkBox_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/lowercase"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_sign"
        app:layout_constraintStart_toEndOf="@+id/checkBox_capital"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_option" />

    <CheckBox
        android:id="@+id/checkBox_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_option" />

    <CheckBox
        android:id="@+id/checkBox_optionalchar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/optional_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_capital" />

    <CheckBox
        android:id="@+id/checkBox_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="^#$"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_number"
        app:layout_constraintStart_toEndOf="@+id/checkBox_lowercase"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_option" />

    <EditText
        android:id="@+id/editText_optinal"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/layout_boder"
        android:ems="10"
        android:padding="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_optionalchar" />

    <Button
        android:id="@+id/buttonGen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGrey"
        android:padding="@dimen/dp_4"
        android:text="@string/genaration_new"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_optinal" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorGrey"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGen"
        app:layout_constraintTop_toBottomOf="@+id/editText_optinal" />

    <ImageView
        android:id="@+id/imageView_listpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="@dimen/dp_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toEndOf="@+id/editText_optinal"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_optionalchar"
        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:theme="@style/MyPickerAppearance"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_similarchar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView_passstrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_numbertitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_result" />

</android.support.constraint.ConstraintLayout>
